unit test for http endpoints
